sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  
  var i=0;
  while(i+1<getNombreValeurs())
  {
    i=0;
    while(plusPetit(i,i+1) && i+1<getNombreValeurs())
    {
      i=i+1;
      j=j+1;
    }
    echange(i,i+1);
  }
  
  
}